--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
+colorama==0.4.6
+comtypes==1.4.15
+markdown-it-py==4.0.0
+mdurl==0.1.2
+numpy==2.4.1
+pandas==3.0.0
 pyautocad==0.2.0
-pywin32==306
-rich>=13.0.0
-pandas>=2.0.0
-openpyxl>=3.1.0
+Pygments==2.19.2
+python-dateutil==2.9.0.post0
+pywin32==311
+rich==14.3.1
+six==1.17.0
+tzdata==2025.3
